fixing issues on mobile

--- a/app/main.less
+++ b/app/main.less
@@ -1,3 +1,7 @@
+.center {
+  text-align: center;
+}
+
 #join_us {
   p {
     opacity : 1;
@@ -35,11 +39,15 @@
 }
 
 .modal-dialog {
-  width: 80%;
+  width: 70%;
+  margin: auto;
   .modal-body {
     background-color: white;
     img {
-      max-width: 300px;
+      max-width: 80%;
+      @media (max-width: 768px) {
+        max-width: 200px;
+      }
     }
     .name h1{
       margin-top: 0px;
